@@ -578,7 +578,6 @@ static struct  dmi_system_id omnibook_ids[] __initdata = {
                 },
                 .driver_data = (void*) TSM30X
         },
-
 	{
 		.callback = dmi_matched,
 		.ident = "Toshiba Satellite M70",
@@ -588,6 +587,16 @@ static struct  dmi_system_id omnibook_ids[] __initdata = {
 		},
 		.driver_data = (void*) TSM30X
 	},
+        {
+                .callback = dmi_matched,
+                .ident = "Toshiba Satellite M100",
+                .matches = {
+                        DMI_MATCH(DMI_SYS_VENDOR, "TOSHIBA"),
+                        DMI_MATCH(DMI_PRODUCT_NAME, "Satellite M100"),
+                },
+                .driver_data = (void*) TSM30X
+        },
+
 	{
 		.callback = dmi_matched,
 		.ident = "Toshiba Satellite M40",
