@@ -1,6 +1,9 @@
 Changelog file for omnibook package:
 ------------------------------------
 
+2.XXXXXXXX Mathieu Bérard <math_b@users.sourceforge.net>
+* Add dmi info for Toshiba Satellite M100 (Thanks Sertaç Ö. Yıldız)
+
 2.20060809 Mathieu Bérard <math_b@users.sourceforge.net>
 * Add dmi info for Toshiba Satellite M40X (Thanks Julien Valroff) 
 * Fix two brown paper bag bugs in Debian/Ubuntu support 
